--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+src/components/DEMO.vue
 *.local
 
 # Editor directories and files
@@ -23,4 +24,3 @@ dist-ssr
 *.sln
 *.sw?
 .env
-DEMO.vue
