--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "axios": "^1.6.2",
     "firebase": "^10.7.1",
+    "pinia": "^2.1.7",
     "uuid": "^9.0.1",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5",
